# log_parser

./: Cargo.toml  Makefile  Readme.md
inputs/: logs.txt
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_tests.rs
